# MYSHOP

./: .gitignore  README.md  pyproject.toml
myshop/communication/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
myshop/communication/templates/communication/: feedback.html  info.html
myshop/myshop/: celery.py  models.py  settings.py  urls.py  views.py
myshop/orders/: admin.py  models.py  other.py  tasks.py  urls.py  views.py
myshop/orders/static/orders/css/: styles.css
myshop/orders/templates/orders/: cart.html  profile.html  verifed_email.html
myshop/product/: admin.py  models.py  other.py  urls.py  views.py
myshop/product/static/product/css/: styles.css
myshop/product/templates/product/: base.html  detail-product.html  female.html  male.html  product.html
myshop/templates/myshop/: base.html  index.html
myshop/users/: admin.py  forms.py  models.py  token.py  urls.py  views.py
myshop/users/templates/users/: login.html  register.html
